# RPostgres

./: .Rbuildignore  .clang-format  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  Dockerfile  ISSUE_TEMPLATE.html  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  R-CMD-check-dev.yaml  R-CMD-check.yaml  README.md  RPostgres.Rproj  RPostgres.cpp  _pkgdown.yml  air.toml  appveyor.yml  authors.html  authors.md  config.status  configure  configure.in  copilot-instructions.html  copilot-instructions.md  cran-comments.md  crash.R  docker-compose.yml  (+9 more)
.aspell/: DBI.rds  defaults.R
.ccache/0/: stats
.ccache/1/: stats
.ccache/2/: stats
.ccache/3/: stats
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  copilot-instructions.md  dep-suggests-matrix.json  security.md  versions-matrix.R
R/: PqConnection.R  PqDriver.R  PqGenerics.R  PqResult.R  RPostgres-pkg.R  RcppExports.R  Redshift.R  connection.R  cpp11.R  cpp4r.R  dbAppendTable_PqConnection.R  dbBegin_PqConnection.R  dbBind_PqResult.R  dbClearResult_PqResult.R  dbColumnInfo_PqResult.R  dbCommit_PqConnection.R  dbConnect_PqDriver.R  dbConnect_RedshiftDriver.R  dbDataType_PqConnection.R  dbDataType_PqDriver.R  dbDisconnect_PqConnection.R  dbExistsTable_PqConnection_Id.R  dbExistsTable_PqConnection_character.R  dbFetch_PqResult.R  dbGetInfo_PqConnection.R  dbGetInfo_PqDriver.R  dbGetRowCount_PqResult.R  dbGetRowsAffected_PqResult.R  dbGetStatement_PqResult.R  dbHasCompleted_PqResult.R  dbIsValid_PqConnection.R  dbIsValid_PqDriver.R  dbIsValid_PqResult.R  dbListFields_PqConnection_Id.R  dbListFields_PqConnection_character.R  dbListObjects_PqConnection_ANY.R  dbListTables_PqConnection.R  dbQuoteIdentifier_PqConnection_Id.R  dbQuoteIdentifier_PqConnection_SQL.R  dbQuoteIdentifier_PqConnection_character.R  (+26 more)
articles/: index.html  index.md  work-queue.html  work-queue.md
dev/: 404.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  ISSUE_TEMPLATE.html  LICENSE-text.html  LICENSE.html  authors.html  authors.md  copilot-instructions.html  copilot-instructions.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  security.html  security.md  sitemap.xml
docs/: NEWS.html  README.html  authors.html  cran-comments.html  docsearch.json  index.html  pkgdown.yml
man/: Postgres.Rd  PqConnection-class.Rd  PqDriver-class.Rd  PqResult-class.Rd  RPostgres-conditions.Rd  RPostgres-package.Rd  Redshift.Rd  dbApply-methods.Rd  dbConnect-PqDriver-method.Rd  dbDataType-PqDriver-ANY-method.Rd  dbDataType-PqDriver-method.Rd  dbDataType.Rd  dbFetch-PqResult-method.Rd  dbGetException-PqConnection-method.Rd  dbSendQuery-PqConnection-method.Rd  dbWriteTable.Rd  pg.Rd  postgres-query.Rd  postgres-tables.Rd  postgres-transactions.Rd  postgresExportLargeObject.Rd  postgresHasDefault.Rd  postgresImportLargeObject.Rd  postgresIsTransacting.Rd  postgresWaitForNotify.Rd  postgresWriteToLargeObject.Rd  pq.Rd  pqExistsTable.Rd  pqListFields.Rd  pqListObjects.Rd  pqListTables.Rd  pqWaitForNotify.Rd  quote.Rd  reexports.Rd
news/: index.html  index.md
reference/: Id.html  Postgres.html  Postgres.md  PqConnection-class.html  PqConnection-class.md  PqDriver-class.html  PqDriver-class.md  PqResult-class.html  RPostgres-package.html  RPostgres.html  Redshift.html  Redshift.md  RedshiftDriver-class.html  dbAppendTable,PqConnection-method.html  dbBind_PqResult.html  dbConnect-PqDriver-method.html  dbDataType,PqConnection-method.html  dbDataType.html  dbDataType.md  dbDisconnect_PqConnection.html  dbGetStatement_PqResult.html  dbQuoteLiteral,PqConnection-method.html  dbRollback,PqConnection-method.html  dbUnloadDriver_PqDriver.html  format.PqConnection.html  index.html  index.md  postgres-query.html  postgres-query.md  postgres-tables.html  postgres-tables.md  postgres-transactions.html  postgres-transactions.md  postgresDefault.html  postgresExportLargeObject.html  postgresExportLargeObject.md  postgresHasDefault.html  postgresHasDefault.md  postgresImportLargeObject.html  postgresImportLargeObject.md  (+8 more)
src/: .gitignore  CMakeLists.txt  DbColumn.cpp  DbColumn.h  DbColumnDataSource.cpp  DbColumnDataSource.h  DbColumnDataSourceFactory.cpp  DbColumnDataSourceFactory.h  DbColumnDataType.h  DbColumnStorage.cpp  DbColumnStorage.h  DbConnection.cpp  DbConnection.h  DbDataFrame.cpp  DbDataFrame.h  DbResult.cpp  DbResult.h  DbResultImpl.h  DbResultImplDecl.h  Makevars  Makevars.in  Makevars.win  PqColumnDataSource.cpp  PqColumnDataSource.h  PqColumnDataSourceFactory.cpp  PqColumnDataSourceFactory.h  PqConnection.cpp  PqConnection.h  PqDataFrame.cpp  PqDataFrame.h  PqResult.cpp  PqResult.h  PqResultImpl.cpp  PqResultImpl.h  PqResultPrep.cpp  PqResultPrep.h  PqResultSimple.cpp  PqResultSimple.h  PqResultSource.cpp  PqResultSource.h  (+22 more)
src/libpq/: Makefile.darwin  Makefile.global.darwin  Makefile.global.win32  Makefile.global.win64  Makefile.shlib  Makefile.win  getaddrinfo.c  libpq-dist.rc  libpq.rc  libpqddll.def  libpqdll.def  pg_config.h.darwin  pg_config.h.win  pg_config_os.h.win
src/win32/: timegm.c
src/workarounds/: XPtr.h
tests/: testthat.R
tools/: winlibs.R
vignettes/: work-queue.Rmd
(+187 files in other folders)
